# sdk-core

./: .gitignore  CONTRIBUTING.md  Cargo.toml  EXTRACTION.md  README.md  build.rs  language_model_implementation_claude.md  language_model_implementation_codex.md  language_model_implementation_codex_v2.md
.github/workflows/: ci.yml  release.yml
conformance/: README.md  run_kitchen_sink_contract.py  run_kitchen_sink_contract_test.py  summarize-parity.py
conformance/contracts/: README.md  ks_agent_as_tool.yaml  ks_agent_handoff.yaml  ks_agent_hitl.yaml  ks_agent_tool_error.yaml  ks_agent_with_mcp.yaml  ks_agent_with_tools.yaml  ks_always_fail.yaml  ks_analyze_text.yaml  ks_batch.yaml  ks_broken_tool.yaml  ks_conditional.yaml  ks_conversational.yaml  ks_cron.yaml  ks_dispatch_context.yaml  ks_error_pipeline.yaml  ks_event_subscriber.yaml  ks_fail_with.yaml  ks_fetch_data.yaml  ks_hitl.yaml  ks_length_scorer.yaml  ks_llm_echo.yaml  ks_llm_provider_adapters.yaml  ks_lookup.yaml  ks_mcp_list_tools.yaml  ks_mega_workflow.yaml  ks_memory_roundtrip.yaml  ks_noop.yaml  ks_noop_workflow.yaml  ks_parallel.yaml  ks_realistic_agent.yaml  ks_replay_durable.yaml  ks_sandbox_file_io.yaml  ks_sentry_comment_logger.yaml  ks_sentry_issue.yaml  ks_sequential.yaml  ks_simulated_llm.yaml  ks_slack_message_logger.yaml  ks_sleep.yaml  ks_state_set_get.yaml  (+4 more)
examples/: anthropic_quickstart.rs  debug_registration.rs  debug_worker.rs  language_model_example.rs  llm_example.rs  openai_quickstart.rs  openrouter_example.rs  sandbox_providers.rs  vectordb_rag_example.rs
proto/api/v1/: common.proto  engine.proto  execution_engine.proto  worker_coordinator.proto
proto/modal/: api.proto
src/: checkpoint.rs  client.rs  coordinator_routing.rs  delta_queue.rs  error.rs  journal_exporter.rs  journal_queue.rs  lib.rs  logging.rs  memory.rs  runtime_adapter.rs  span_export_queue.rs  span_filter.rs  telemetry.rs  worker.rs
src/adk/: agent.rs  memory.rs  mod.rs  runtime_client.rs  session.rs  tool.rs
src/adk/context/: mod.rs  runtime.rs  signals.rs  tasks.rs  timers.rs  utils.rs
src/chat/: adapter.rs  message_buffer.rs  mod.rs  request_builder.rs  types.rs  webhook.rs
src/context/: config.rs  mod.rs  namespaces.rs  registry.rs
src/eval/: agent_trace_metrics.rs  builtin_scorer.rs  deterministic.rs  llm_judge.rs  mod.rs  normalized.rs  trace.rs  trace_eval_metrics.rs
src/graph/: memory_graph.rs  mod.rs
src/llm/: mod.rs  provider.rs  registry.rs  telemetry.rs
src/llm/models/: chat.rs  completion.rs  embeddings.rs  mod.rs  streaming.rs  usage.rs
src/llm/providers/: anthropic.rs  azure.rs  bedrock.rs  mod.rs  openai.rs  vertexai.rs
src/llm/providers/openrouter/: mod.rs  provider.rs  types.rs
src/llm/vectordb/: mod.rs  rag.rs  types.rs
src/llm/vectordb/providers/: mod.rs  pgvector.rs  qdrant.rs
src/lm/: anthropic.rs  azure.rs  baseten.rs  bedrock.rs  deepseek.rs  embedder.rs  fireworks.rs  google.rs  groq.rs  http.rs  huggingface.rs  interface.rs  lepton.rs  mistral.rs  mod.rs  moonshot.rs  ollama.rs  openai.rs  openai_chat.rs  openai_common.rs  openrouter.rs  telemetry.rs  together.rs  xai.rs
src/mcp/: client.rs  error.rs  mod.rs  transport.rs  types.rs
src/memory_service/: config.rs  mod.rs
src/memory_service/providers/: libsql.rs  mod.rs
src/sandbox/: mod.rs  types.rs
src/sandbox/providers/: common.rs  daytona.rs  e2b.rs  mod.rs  modal.rs  northflank.rs  remote.rs  together.rs  vercel.rs  wasm.rs
src/vectordb/: mod.rs
src/vectordb/providers/: agnt5.rs  mod.rs  pgvector.rs  pinecone.rs  qdrant.rs
src/webhook/: mod.rs  sentry.rs  slack.rs  standard.rs
tests/: eval_goldens.rs
wasm-modules/: .gitignore  download.sh
