[package]
name = "agnt5-sdk-core"
version = "0.1.1"
edition = "2021"
authors = ["AGNT5 Team"]
description = "High-performance Rust core for AGNT5 SDK"

[lib]
name = "agnt5_sdk_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
# gRPC and Protocol Buffers
tonic = { version = "0.14.1", features = ["tls-ring", "tls-webpki-roots"] }
tonic-prost = "0.14.1"
prost = "0.14.1"
prost-types = "0.14.1"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
async-stream = "0.3"
async-trait = "0.1"
flume = "0.11"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
tracing-log = "0.2"
log = "0.4"

# OpenTelemetry - with OTLP exporter for traces and logs
opentelemetry = "0.30"
opentelemetry_sdk = { version = "0.30", features = ["rt-tokio", "logs", "metrics"] }
opentelemetry-otlp = { version = "0.30", features = ["trace", "logs", "metrics", "grpc-tonic"] }
opentelemetry-appender-tracing = "0.30"
tracing-opentelemetry = "0.31"

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Random number generation for jitter
rand = "0.9"

# Additional logging and time dependencies
lazy_static = "1.4"
chrono = { version = "0.4", features = ["serde"] }

# LLM Provider Dependencies
# HTTP client with streaming support (using rustls for better musl compatibility)
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls", "multipart"], default-features = false }
reqwest-streams = { version = "0.6", features = ["json"] }
futures = "0.3"

# AWS SDK for Bedrock - Temporarily disabled due to Rust version requirements
# aws-sdk-bedrockruntime = "1.50"
# aws-config = "1.1"
# aws-credential-types = { version = "1.1", features = ["hardcoded-credentials"] }
# aws-smithy-runtime = { version = "1.1", features = ["test-util"] }
# aws-smithy-types = "1.1"
# aws-types = "1.1"

# Google OAuth for VertexAI
yup-oauth2 = "8.3"

# OpenTelemetry semantic conventions for LLM operations
opentelemetry-semantic-conventions = { version = "0.27", features = ["semconv_experimental"] }

# HTTP utilities
http = "1.1"

# Embedded libSQL vector memory provider
libsql = { version = "0.9.30", optional = true }

# Additional JSON utilities for metadata
serde_yaml = "0.9"

# For text processing and chunking
regex = "1.0"

# JSON Schema validation (json_schema built-in scorer)
jsonschema = { version = "0.28", default-features = false }

# URL encoding for API requests
urlencoding = "2.1"
unicode-segmentation = "1.10"
hex = "0.4"
hmac = "0.12"
sha2 = "0.10"

# Base64 encoding for sandbox file operations
base64 = "0.22"

# Bytes for WASI pipe types
bytes = "1"

# System info for worker metadata
hostname = "0.4"

# Sandbox - Wasmtime (optional, behind wasm-sandbox feature)
wasmtime = { version = "29", optional = true }
wasmtime-wasi = { version = "29", optional = true }
tempfile = { version = "3", optional = true }
flate2 = "1"
tar = "0.4"
tokio-tungstenite = { version = "0.29.0", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }

[features]
default = []
libsql-memory = ["dep:libsql"]
wasm-sandbox = ["dep:wasmtime", "dep:wasmtime-wasi", "dep:tempfile"]

# Build dependencies
[build-dependencies]
tonic-prost-build = "0.14"
protobuf-src = "2.0"

# Examples
# (Files in examples/ are auto-discovered; entries here are only needed for
# non-standard paths. Stale entries for deleted examples break cargo fmt.)
[[example]]
name = "debug_worker"
path = "examples/debug_worker.rs"

[[example]]
name = "language_model_example"
path = "examples/language_model_example.rs"
